Use a predictable shared localstack container